*********************************************************************************

                            RELEASE NOTES

*********************************************************************************
27/12/2022 1.6.0
new features:
    review forecasts
bugfixes:
    Correct order rounds in admin
    Forecast calculation
    Forecast retrieval

11/07/2022 1.5.0
new features:
    persisted the forecasts
bugfixes:


24/04/2022 1.4.0
new features:
    implemented algorithm page
bugfixes:
    last round issue fixed

30/12/2021 1.3.0
new features :
    improve the layout of forecasts
bugfixes:
    Fix standings rounds
    fix the result overview each team
15/10/2021 1.2.0
new features :
    Fix dependencies issues.
bugfixes:

13/10/2021 1.1.0
new features :
    Improved standings :
    show standing on requested round
    on weekends, will show correct standing (of previous round)
bugfixing :
    update scheduler of standing
    update the standing, changes on round.

5/10/2021 1.0.2
bugfixing :
    forecastDto
    update logging schedulers

3/10/2021 1.0.1
bugfixing :
    Removed redundant logging

2/10/2021 1.0.0
Initial version
     Display of predefined leagues
     Display the results for each league
     Display the results for each team of the league
     Display the standing of the league
     Calculate the prospects
     Calculate the forecastDtos
     Admin page
     Foresee historic data