@@ -70,7 +70,10 @@
                                             </ng-container>
                                             <br/>
                                             ({{forecastDetail.nextGame?.eventDate | date: 'dd/MM/yyyy'}})</td>
-                                        <td><i class="pi pi-question-circle p-mr-2" (click)="showScoreInfo(forecastDetail)"></i>{{forecastDetail.finalScore}}</td>
+                                        <td><ng-container *ngIf="forecastDetail.forecastResult != null">
+                                                <i class="pi pi-bell p-mr-2" style="background-color: #ef6262" (click)="showWarningMessage(forecastDetail)"></i>
+                                            </ng-container>
+                                            <i class="pi pi-question-circle p-mr-2" (click)="showScoreInfo(forecastDetail)"></i>{{forecastDetail.finalScore}}</td>
                                 </tr>
                             </ng-template>
                         </p-table>
@@ -84,5 +87,12 @@
     <p [innerHTML]="selectedForecastDetail?.message"></p>
     <ng-template pTemplate="footer">
         <p-button icon="pi pi-check" (click)="displayScoreInfo=false" label="Ok" styleClass="p-button-text"></p-button>
+    </ng-template>
+</p-dialog>
+
+<p-dialog [(visible)]="displayWarningMessage" [style]="{width: '50vw'}" [baseZIndex]="10000">
+    <p [innerHTML]="warningForecastDetail?.errorMessage"></p>
+    <ng-template pTemplate="footer">
+        <p-button icon="pi pi-check" (click)="displayWarningMessage=false" label="Ok" styleClass="p-button-text"></p-button>
     </ng-template>
 </p-dialog>
